2010-10-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #6022: Layout property for the module panel (Thanks to Dennis Ahrens)

2009-12-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised version to 0.2-dev and updated dependency version of Extbase and Fluid
	* Fixed dispatch to an action from another controller (Thanks to Fabien Udriot)

2009-10-17  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed handling of Flash messages (to reflect changes in Core)
	* Released version 0.1.1 to TER

2009-09-20  Xavier Perseguers  <typo3@perseguers.ch>

	* Removed deprecated code (as of PHP5.3)

2009-09-18  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated ActionController to reflect changes in EXT:extbase

2009-09-07  Xavier Perseguers  <typo3@perseguers.ch>

	* Released version 0.1.0 to TER